fix mobile overflow

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -5,7 +5,6 @@
 @layer base {
   html {
     scrollbar-gutter: stable;
-    overflow-x: hidden;
   }
 }
 
